@@ -6,8 +6,8 @@ import com.fasterxml.jackson.databind.SerializationFeature;
 import com.panandafog.mt_server.authorisation.AppUser;
 import com.panandafog.mt_server.authorisation.TestUserDetails;
 import com.panandafog.mt_server.authorisation.UserService;
-import com.panandafog.mt_server.music.DTO.last_fm.*;
 import com.panandafog.mt_server.music.DTO.shared.SharedTrackDTO;
+import com.panandafog.mt_server.music.DTO.vk.*;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
@@ -17,17 +17,19 @@ import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.MvcResult;
 
 import java.nio.charset.Charset;
-import java.util.*;
+import java.util.Arrays;
+import java.util.Date;
+import java.util.HashSet;
+import java.util.List;
 
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-
 @SpringBootTest
 @AutoConfigureMockMvc
-public class LastFmTests {
+public class VKTests {
 
     public static final MediaType APPLICATION_JSON_UTF8 = new MediaType(MediaType.APPLICATION_JSON.getType(), MediaType.APPLICATION_JSON.getSubtype(), Charset.forName("utf8"));
 
@@ -42,71 +44,79 @@ public class LastFmTests {
 
         TestUserDetails userDetails = userService.getTestUserDetails();
 
-        LastFmAddTracksOperationDTO addTracksOperation = new LastFmAddTracksOperationDTO(
+        VKAddTracksOperationDTO addTracksOperation = new VKAddTracksOperationDTO(
                 1,
                 new Date(),
                 new Date(),
-                new LastFmSearchTracksSuboperationDTO(
+                new VKSearchTracksSuboperationDTO(
                         1,
                         new Date(),
                         new Date(),
-                        new HashSet<LastFmSearchedTrackDTO>(Arrays.asList(
-                                new LastFmSearchedTrackDTO(
+                        new HashSet<>(List.of(
+                                new VKSearchedTrackDTO(
                                         1,
                                         true,
-                                        new HashSet<LastFmTrackDTO>(List.of(
-                                                new LastFmTrackDTO(
+                                        new SharedTrackDTO(
+                                                1,
+                                                "title 1",
+                                                "spotifyID 1",
+                                                "lastFmID 1",
+                                                "vkID 1",
+                                                "vkOwnerID 1",
+                                                Arrays.asList("foo", "bar"),
+                                                60
+                                        ),
+                                        new HashSet<>(List.of(
+                                                new VKSavedItemDTO(
                                                         1,
-                                                        "1",
-                                                        "name 1",
+                                                        "title 1",
                                                         "artist 1",
-                                                        "url 1"
-                                                )
-                                        ))
-                                ),
-                                new LastFmSearchedTrackDTO(
-                                        2,
-                                        true,
-                                        new HashSet<LastFmTrackDTO>(List.of(
-                                                new LastFmTrackDTO(
-                                                        2,
-                                                        "2",
-                                                        "name 2",
-                                                        "artist 2",
-                                                        "url 2"
+                                                        1,
+                                                        60
                                                 )
                                         ))
                                 )
                         ))
-
                 ),
-                new LastFmLikeTracksSuboperationDTO(
+                new VKLikeTracksSuboperationDTO(
                         1,
                         new Date(),
                         new Date(),
-                        new HashSet<LastFmTrackToLikeDTO>(List.of(
-                                new LastFmTrackToLikeDTO(
+                        new HashSet<>(List.of(
+                                new VKTrackToLikeDTO(
                                         1,
                                         true,
-                                        new LastFmTrackDTO(
-                                                3,
-                                                "3",
-                                                "name 3",
-                                                "artist 3",
-                                                "url 3"
+                                        new VKSavedItemDTO(
+                                                2,
+                                                "title 2",
+                                                "artist 2",
+                                                2,
+                                                180
                                         )
                                 )
                         )),
-                        new HashSet<SharedTrackDTO>(List.of(
+                        new HashSet<>(List.of(
                                 new SharedTrackDTO(
-                                        1,
-                                        "title 1",
-                                        "spotifyID 1",
-                                        "lastFmID 1",
-                                        "vkID 1",
-                                        "vkOwnerID 1",
+                                        2,
+                                        "title 2",
+                                        "spotifyID 2",
+                                        "lastFmID 2",
+                                        "vkID 2",
+                                        "vkOwnerID 2",
                                         Arrays.asList("foo", "bar"),
-                                        60
+                                        120
+                                )
+                        )),
+                        new HashSet<>(List.of(
+                                new SharedTrackDTO(
+                                        3,
+                                        "title 3",
+                                        "spotifyID 3",
+                                        "lastFmID 3",
+                                        "vkID 3",
+                                        "vkOwnerID 3",
+                                        Arrays.asList("foo", "bar"),
+                                        180
                                 )
                         ))
                 ),
@@ -120,7 +130,7 @@ public class LastFmTests {
         String requestJson = ow.writeValueAsString(addTracksOperation);
 
         this.mockMvc.perform(
-                        post("/lastfm/saveOperation")
+                        post("/vk/saveOperation")
                                 .contentType(APPLICATION_JSON_UTF8)
                                 .content(requestJson)
                                 .header(userDetails.getHeaderKey(), userDetails.getHeaderValue())
@@ -128,7 +138,7 @@ public class LastFmTests {
                 .andExpect(status().isOk())
                 .andDo(
                         result -> this.mockMvc.perform(
-                                        get("/lastfm/getOperation")
+                                        get("/vk/getOperation")
                                                 .param("id", "1")
                                                 .header(userDetails.getHeaderKey(), userDetails.getHeaderValue())
                                 )
@@ -142,71 +152,79 @@ public class LastFmTests {
 
         TestUserDetails userDetails = userService.getTestUserDetails();
 
-        LastFmAddTracksOperationDTO addTracksOperation = new LastFmAddTracksOperationDTO(
+        VKAddTracksOperationDTO addTracksOperation = new VKAddTracksOperationDTO(
                 null,
                 new Date(),
                 new Date(),
-                new LastFmSearchTracksSuboperationDTO(
+                new VKSearchTracksSuboperationDTO(
                         null,
                         new Date(),
                         new Date(),
-                        new HashSet<LastFmSearchedTrackDTO>(Arrays.asList(
-                                new LastFmSearchedTrackDTO(
+                        new HashSet<>(List.of(
+                                new VKSearchedTrackDTO(
                                         null,
                                         true,
-                                        new HashSet<LastFmTrackDTO>(List.of(
-                                                new LastFmTrackDTO(
+                                        new SharedTrackDTO(
+                                                null,
+                                                "title 1",
+                                                "spotifyID 1",
+                                                "lastFmID 1",
+                                                "vkID 1",
+                                                "vkOwnerID 1",
+                                                Arrays.asList("foo", "bar"),
+                                                60
+                                        ),
+                                        new HashSet<>(List.of(
+                                                new VKSavedItemDTO(
                                                         null,
-                                                        "1",
-                                                        "name 1",
+                                                        "title 1",
                                                         "artist 1",
-                                                        "url 1"
-                                                )
-                                        ))
-                                ),
-                                new LastFmSearchedTrackDTO(
-                                        null,
-                                        true,
-                                        new HashSet<LastFmTrackDTO>(List.of(
-                                                new LastFmTrackDTO(
-                                                        null,
-                                                        "2",
-                                                        "name 2",
-                                                        "artist 2",
-                                                        "url 2"
+                                                        1,
+                                                        60
                                                 )
                                         ))
                                 )
                         ))
-
                 ),
-                new LastFmLikeTracksSuboperationDTO(
+                new VKLikeTracksSuboperationDTO(
                         null,
                         new Date(),
                         new Date(),
-                        new HashSet<LastFmTrackToLikeDTO>(List.of(
-                                new LastFmTrackToLikeDTO(
+                        new HashSet<>(List.of(
+                                new VKTrackToLikeDTO(
                                         null,
                                         true,
-                                        new LastFmTrackDTO(
+                                        new VKSavedItemDTO(
                                                 null,
-                                                "3",
-                                                "name 3",
-                                                "artist 3",
-                                                "url 3"
+                                                "title 2",
+                                                "artist 2",
+                                                2,
+                                                180
                                         )
                                 )
                         )),
-                        new HashSet<SharedTrackDTO>(List.of(
+                        new HashSet<>(List.of(
                                 new SharedTrackDTO(
                                         null,
-                                        "title 1",
-                                        "spotifyID 1",
-                                        "lastFmID 1",
-                                        "vkID 1",
-                                        "vkOwnerID 1",
+                                        "title 2",
+                                        "spotifyID 2",
+                                        "lastFmID 2",
+                                        "vkID 2",
+                                        "vkOwnerID 2",
                                         Arrays.asList("foo", "bar"),
-                                        60
+                                        120
+                                )
+                        )),
+                        new HashSet<>(List.of(
+                                new SharedTrackDTO(
+                                        null,
+                                        "title 3",
+                                        "spotifyID 3",
+                                        "lastFmID 3",
+                                        "vkID 3",
+                                        "vkOwnerID 3",
+                                        Arrays.asList("foo", "bar"),
+                                        180
                                 )
                         ))
                 ),
@@ -220,7 +238,7 @@ public class LastFmTests {
         String requestJson = ow.writeValueAsString(addTracksOperation);
 
         this.mockMvc.perform(
-                        post("/lastfm/saveOperation")
+                        post("/vk/saveOperation")
                                 .contentType(APPLICATION_JSON_UTF8)
                                 .content(requestJson)
                                 .header(userDetails.getHeaderKey(), userDetails.getHeaderValue())
@@ -229,10 +247,10 @@ public class LastFmTests {
                 .andDo(
                         result -> {
                             MvcResult mvcResult = this.mockMvc.perform(
-                                        get("/lastfm/getOperation")
-                                                .param("id", "1")
-                                                .header(userDetails.getHeaderKey(), userDetails.getHeaderValue())
-                                        )
+                                            get("/vk/getOperation")
+                                                    .param("id", "1")
+                                                    .header(userDetails.getHeaderKey(), userDetails.getHeaderValue())
+                                    )
                                     .andExpect(status().isOk())
 //                                    .andExpect(content().json(requestJson))
                                     .andReturn();
